--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -62,12 +62,18 @@
   <ItemGroup>
     <Compile Include="KMPTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StreamSplitterTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PsUtils.csproj">
       <Project>{5fe79134-f836-4f4b-8664-f93590e5271c}</Project>
       <Name>PsUtils</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Data\file1.txt" />
+    <Content Include="Data\file2.txt" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
